# unpack_unitypackage

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
tests/: test_testPackage.py
unpack_unitypackage/: extractor.py
