[tool.poetry]
name = "unpack-unitypackage"
version = "1.0.0"
description = "Unpack a unitypackage"
authors = ["Alex <alex@tailbyte.org>"]
license = "MIT"
readme = "README.md"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Build Tools',
    'Topic :: System :: Filesystems'
]
packages = [{include = "unpack_unitypackage"}]

[tool.poetry.dependencies]
python = "^3.8"
tarsafe = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
